# aktor

./: .gitignore  .gitmodules  CMakeLists.txt  README  actor.c  actor.h  lfqueue.c  lfqueue.h  queue.c  queue.h  sched.c  sched.h  update.sh
kjson/: CMakeLists.txt  README  array.h  hash.h  kjson.c  kjson.h  map.c  map.h  numbox.h  stream.c  stream.h  string_builder.h
kjson/test/: benchmark4.json  benchmark5.json  test_kjson.c  test_stream.c  test_string_builder.c  test_tostring.c
test/: ring.c  test_actor.c  test_lfqueue.c  test_queue.c  test_sched.c
